--- a/.sauce/full-config.yml
+++ b/.sauce/full-config.yml
@@ -5,20 +5,23 @@ showConsoleLog: false
 sauce:
   region: eu-central-1
   concurrency: 2
+  metadata:
+    tags:
+      - e2e
+      - release team
+    build: $CI_COMMIT_SHORT_SHA
 espresso:
   app: $BITRISE_APK_PATH
   testApp: $BITRISE_TEST_APK_PATH
 suites:
-- name: espresso - Google Pixel .* - Android GoogleAPI Emulator
-  devices:
-  - name: Google Pixel .*
-  emulators:
-  - name: Android GoogleAPI Emulator
-    platformVersions:
-    - "12.0"
+  - name: "Run UI Tests on Android Emulator"
+    emulators:
+      - name: "Android GoogleAPI Emulator"
+        platformVersions:
+          - "12.0"
 artifacts:
   download:
     match:
-    - '*'
+      - junit.xml
     when: always
-    directory: artifacts
+    directory: ./artifacts/
