--- a/.sauce/config.yml
+++ b/.sauce/config.yml
@@ -10,12 +10,14 @@ espresso:
   testApp: $BITRISE_TEST_APK_PATH
 suites:
 - name: espresso - Google Pixel .* - Android GoogleAPI Emulator
-  devices:
-  - name: Google Pixel .*
   emulators:
   - name: Android GoogleAPI Emulator
     platformVersions:
     - "12.0"
+  devices:
+    - id: LG_Q6_real_us
+    - name: "Samsung.*"
+      platformVersion: "8.0.0"
 artifacts:
   download:
     match:
