--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,34 +1,29 @@
-name: Android CI/CD
+name: Android CI
 
 on:
   push:
-    branches:
-      - main
-
-env:
-  ANDROID_SDK_ROOT: /usr/local/android-sdk
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Setup Java
-      uses: actions/setup-java@v1
+    - uses: actions/checkout@v3
+    - name: set up JDK 11
+      uses: actions/setup-java@v3
       with:
-        java-version: 11
+        java-version: '11'
+        distribution: 'temurin'
+        cache: gradle
 
-    - name: Setup Android SDK
-      uses: actions/setup-android@v1
-      with:
-        android-sdk-license: accept
-        android-sdk: "platform-tools,tools,build-tools;29.0.2"
-
-    - name: Build and test the app
-      run: ./gradlew build connectedCheck
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+    - name: Build with Gradle
+      run: ./gradlew build
 
     - name: Upload APK to GitHub Releases
       if: success()
@@ -36,3 +31,21 @@ jobs:
       with:
         name: app.apk
         path: app/build/outputs/apk/debug/app-debug.apk
+    - name: Install Firebase CLI
+      run: |
+        sudo curl -sL firebase.tools | bash
+
+    - name: Login to Firebase
+      run: firebase login:ci --token "$FIREBASE_TOKEN"
+
+    - name: Deploy to Firebase App Distribution
+      run: firebase appdistribution:distribute app/build/outputs/apk/debug/app-debug.apk --app "$FIREBASE_APP_ID" --groups "$FIREBASE_GROUP_ID" --token "$FIREBASE_TOKEN"
+      
+    - name: Deploy to Google Play Store
+      uses: r0adkll/google-play-publisher-action@v1
+      with:
+        service-account: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_KEY }}
+        apk-file-path: app/build/outputs/apk/debug/app-debug.apk
+        track: internal
+        apk-version-code: ${{ env.GITHUB_RUN_NUMBER }}
+        apk-release-notes: "Release ${{ env.GITHUB_RUN_NUMBER }} from GitHub Actions"
